--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background: url(img/imagem.jpg);
+  background: green;
   color: #333;
 }
 
