--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background: green;
+  background: url('floresta-6sk40qqvtlt496ub.jpg');
   color: #333;
 }
 
