--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ section {
 }
 
 .card {
-  background: white;
+  background: rgb(0, 0, 0);
   padding: 1rem;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
